<resources>
    <string name="app_name">DiazFu</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_soporte">Soporte</string>
    <string name="action_logout">Cerrar Sessión</string>

    <string name="default_company_name">SkillCoders © 2017</string>
    <string name="default_login_username">Usuario</string>
    <string name="default_login_password">Password</string>
    <string name="default_login_btn">Login</string>
    <string name="default_login_forgot_password">Olvide mi contraseña</string>

    <!--Opciones del menu-->
    <string name="default_item_menu_title_inicio">Inicio</string>
    <string name="default_item_menu_title_administracion">Administración</string>
    <string name="default_item_menu_title_prestamos">Préstamos</string>
    <string name="default_item_menu_title_pagos">Pagos</string>
    <string name="default_item_menu_title_promotores">Promotores</string>
    <string name="default_item_menu_title_clientes">Clientes</string>
    <string name="default_item_menu_title_grupos">Grupos</string>
    <string name="default_item_menu_title_prestamos_grupales">Préstamos Grupales</string>
    <string name="default_item_menu_title_prestamos_individuales">Préstamos Individuales</string>
    <string name="default_item_menu_title_proximos_pagos">Proximos Pagos</string>
    <string name="default_item_menu_title_actividades">Actividades</string>
    <string name="default_item_menu_title_comisiones">Comisiones</string>

    <!--Titulos de la actividad-->
    <string name="default_activity_title_promotores">Promotores</string>
    <string name="default_activity_title_clientes">Clientes</string>
    <string name="default_activity_title_grupos">Grupos</string>
    <string name="default_activity_title_prestamos_grupales">Prestamos Grupales</string>
    <string name="default_activity_title_prestamos_individuales">Prestamos Individuales</string>
    <string name="default_activity_title_proximos_pagos">Proximos Pagos</string>
    <string name="default_activity_title_actividades">Actividades</string>
    <string name="default_activity_title_comisiones">Comisiones</string>
    <string name="default_activity_title_documentos">Documentos</string>

    <!--Form subtitle-->
    <string name="default_form_title_pagar">Pagar</string>
    <string name="default_form_title_autorizar">Autorizar</string>
    <string name="default_form_title_entregar">Entregar</string>
    <string name="default_form_title_ver">Consultar</string>
    <string name="default_form_title_edit">Modificar</string>
    <string name="default_form_title_new">Registrar</string>


    <string name="default_powered_by">© 2017 Copyright | Powered by SkillCoders</string>

    <string name="default_loading_msg">Por favor espera un momento</string>
    <string name="default_alert_dialog_aceptar">Aceptar</string>
    <string name="default_alert_dialog_cancelar">Cancelar</string>
    <string name="default_alert_dialog_si">Si</string>
    <string name="default_alert_dialog_no">No</string>

    <string name="default_enable_permissions">Debes habilitar los permisos para la aplicación</string>
</resources>
