<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_inicio"
            android:checked="true"
            android:icon="@mipmap/ic_home_black_48dp"
            android:title="@string/default_item_menu_title_inicio" />
        <item
            android:id="@+id/menu_title_administracion"
            android:title="@string/default_item_menu_title_administracion">
            <menu>
                <group
                    android:id="@+id/submenu_administracion"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_item_promotores"
                        android:icon="@mipmap/ic_assignment_ind_black_48dp"
                        android:title="@string/default_item_menu_title_promotores" />
                    <item
                        android:id="@+id/menu_item_clientes"
                        android:icon="@mipmap/ic_person_black_48dp"
                        android:title="@string/default_item_menu_title_clientes" />
                    <item
                        android:id="@+id/menu_item_grupos"
                        android:icon="@mipmap/ic_group_black_48dp"
                        android:title="@string/default_item_menu_title_grupos" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/menu_title_prestamos"
            android:title="@string/default_item_menu_title_prestamos">
            <menu>
                <group
                    android:id="@+id/submenu_prestamos"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_item_prestamos_grupales"
                        android:icon="@mipmap/ic_wc_black_48dp"
                        android:title="@string/default_item_menu_title_prestamos_grupales" />
                    <item
                        android:id="@+id/menu_item_prestamos_individuales"
                        android:icon="@mipmap/ic_credit_card_black_48dp"
                        android:title="@string/default_item_menu_title_prestamos_individuales" />
                </group>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/submenu_actividades"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_proximos_pagos"
            android:icon="@mipmap/ic_event_available_black_48dp"
            android:title="@string/default_item_menu_title_proximos_pagos" />
        <item
            android:id="@+id/menu_item_actividades"
            android:icon="@mipmap/ic_event_note_black_48dp"
            android:title="@string/default_item_menu_title_actividades" />
        <item
            android:id="@+id/menu_item_comisiones"
            android:icon="@mipmap/ic_business_center_black_48dp"
            android:title="@string/default_item_menu_title_comisiones" />
    </group>
</menu>
